--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
 <p>There are no logs maintained!</p>
 
 
+<h2>
+    Android Permissions.
+</h2>
 
+<p>The App requires following permissions</p>
+
+<ul>
+    <li>Access to Internet</li>
+    <li>Access to storage</li>
+    <li>billing</li>
+</ul>
+
+<p>We DO NOT collect/log ANY data from the user.</p>
+<p>Billing is managed by Google for in app purchaces.</p>
 
 <h2>Advertising Partners Privacy Policies</h2>
 
